[package]
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
keywords = ["index", "datastructure"]
description = "Append-only, on-disk key-value index"
license = "GPL-3.0"
repository = "https://github.com/krl/idx"
documentation = "https://docs.rs/idx/"

name = "idx"
version = "0.1.0"

[dependencies]
diskvec = "0.1.1"
seahash = "3.0"

[dev-dependencies]
tempdir = "0.3.5"
