[package]
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
description = "Append-only, on-disk key-value index"
documentation = "https://docs.rs/idx/"
keywords = ["index", "datastructure"]
license = "GPL-3.0"
name = "idx"
repository = "https://github.com/krl/idx"
version = "0.2.0"

[dependencies]
memmap = "0.6.2"
parking_lot = "0.5.3"
seahash = "3.0"

[dev-dependencies]
tempdir = "0.3.5"
